# WarSimulator

./: CMakeLists.txt  README.md
include/: Army.h  Console.h  Menus.h  Player.h
src/: Army.cpp  Console.cpp  Main.cpp  Menus.cpp  Player.cpp
